# robocloud-arm

./: .gitignore  pyproject.toml  requirements.txt
esp32/: esp32.ino  robocloud_arm_wifi.ino
laptop/: README.md  requirements.txt  yolo_follow_gui.py
pi/: __init__.py  arm_serial_smoke.py  comms.py  config.py  ik_controller.py  ik_math.py  logutil.py  main.py  remote_bridge.py
pi/controller/: __init__.py  arm.py  executor.py  kinematics.py  motion.py  network_io.py  serial_io.py
pi/input/: __init__.py  keyboard.py  voice.py
pi/perception/: __init__.py  camera.py  stream.py  tracker.py  vision_control.py
tests/: stream_smoke_test.py
